Change Log:

Dec. 04

- Magician: Added formula for heal dmg
- General: Added critical dmg table