@@ -1,0 +1,283 @@
+export default [
+  {
+    name: 'Energy Bolt',
+    type: 'none',
+    values: [
+      {skillMagic: 20}, {skillMagic: 21}, {skillMagic: 22}, {skillMagic: 23},
+      {skillMagic: 26}, {skillMagic: 27}, {skillMagic: 28}, {skillMagic: 31},
+      {skillMagic: 32}, {skillMagic: 35}, {skillMagic: 36}, {skillMagic: 39},
+      {skillMagic: 40}, {skillMagic: 43}, {skillMagic: 44}, {skillMagic: 47},
+      {skillMagic: 48}, {skillMagic: 51}, {skillMagic: 52}, {skillMagic: 55},
+    ]
+  } , {
+    name: 'Magic Claw',
+    type: 'none',
+    values: [
+      {skillMagic: 11*2}, {skillMagic: 12*2}, {skillMagic: 13*2}, {skillMagic: 14*2},
+      {skillMagic: 16*2}, {skillMagic: 17*2}, {skillMagic: 18*2}, {skillMagic: 20*2},
+      {skillMagic: 21*2}, {skillMagic: 23*2}, {skillMagic: 24*2}, {skillMagic: 26*2},
+      {skillMagic: 27*2}, {skillMagic: 29*2}, {skillMagic: 30*2}, {skillMagic: 32*2},
+      {skillMagic: 34*2}, {skillMagic: 36*2}, {skillMagic: 38*2}, {skillMagic: 40*2},
+    ]
+  }, {
+    name: 'Fire Arrow',
+    type: 'fire',
+    values: [
+      {skillMagic: 33}, {skillMagic: 36}, {skillMagic: 39}, {skillMagic: 42},
+      {skillMagic: 45}, {skillMagic: 48}, {skillMagic: 51}, {skillMagic: 54},
+      {skillMagic: 57}, {skillMagic: 60}, {skillMagic: 63}, {skillMagic: 66},
+      {skillMagic: 69}, {skillMagic: 72}, {skillMagic: 75}, {skillMagic: 78},
+      {skillMagic: 81}, {skillMagic: 84}, {skillMagic: 87}, {skillMagic: 90},
+      {skillMagic: 93}, {skillMagic: 96}, {skillMagic: 99}, {skillMagic: 102},
+      {skillMagic: 105}, {skillMagic: 108}, {skillMagic: 111}, {skillMagic: 114},
+      {skillMagic: 117}, {skillMagic: 120},
+    ]
+  }, {
+    name: 'Poison Brace',
+    type: 'poison',
+    values: [
+      {skillMagic: 12}, {skillMagic: 14}, {skillMagic: 16}, {skillMagic: 18},
+      {skillMagic: 20}, {skillMagic: 22}, {skillMagic: 24}, {skillMagic: 26},
+      {skillMagic: 28}, {skillMagic: 30}, {skillMagic: 32}, {skillMagic: 34},
+      {skillMagic: 36}, {skillMagic: 38}, {skillMagic: 40}, {skillMagic: 42},
+      {skillMagic: 44}, {skillMagic: 46}, {skillMagic: 48}, {skillMagic: 50},
+      {skillMagic: 52}, {skillMagic: 54}, {skillMagic: 56}, {skillMagic: 58},
+      {skillMagic: 60}, {skillMagic: 62}, {skillMagic: 64}, {skillMagic: 66},
+      {skillMagic: 68}, {skillMagic: 70},
+    ]
+  }, {
+    name: 'Explosion',
+    type: 'fire',
+    values: [
+      {skillMagic: 60}, {skillMagic: 64}, {skillMagic: 68}, {skillMagic: 71},
+      {skillMagic: 74}, {skillMagic: 77}, {skillMagic: 79}, {skillMagic: 81},
+      {skillMagic: 83}, {skillMagic: 86}, {skillMagic: 88}, {skillMagic: 90},
+      {skillMagic: 92}, {skillMagic: 94}, {skillMagic: 97}, {skillMagic: 99},
+      {skillMagic: 101}, {skillMagic: 103}, {skillMagic: 105}, {skillMagic: 108},
+      {skillMagic: 110}, {skillMagic: 112}, {skillMagic: 114}, {skillMagic: 116},
+      {skillMagic: 119}, {skillMagic: 121}, {skillMagic: 123}, {skillMagic: 125},
+      {skillMagic: 127}, {skillMagic: 130},
+    ]
+  }, {
+    name: 'Posion Mist',
+    type: 'poison',
+    values: [
+      {skillMagic: 32}, {skillMagic: 34}, {skillMagic: 36}, {skillMagic: 38},
+      {skillMagic: 40}, {skillMagic: 42}, {skillMagic: 44}, {skillMagic: 46},
+      {skillMagic: 48}, {skillMagic: 50}, {skillMagic: 52}, {skillMagic: 54},
+      {skillMagic: 56}, {skillMagic: 58}, {skillMagic: 60}, {skillMagic: 62},
+      {skillMagic: 64}, {skillMagic: 66}, {skillMagic: 68}, {skillMagic: 70},
+      {skillMagic: 72}, {skillMagic: 74}, {skillMagic: 76}, {skillMagic: 78},
+      {skillMagic: 80}, {skillMagic: 82}, {skillMagic: 84}, {skillMagic: 86},
+      {skillMagic: 88}, {skillMagic: 90},
+    ]
+  }, {
+    name: 'Fire Demon',
+    type: 'fire',
+    values: [
+      {skillMagic: 82}, {skillMagic: 84}, {skillMagic: 86}, {skillMagic: 88},
+      {skillMagic: 90}, {skillMagic: 92}, {skillMagic: 94}, {skillMagic: 96},
+      {skillMagic: 98}, {skillMagic: 100}, {skillMagic: 102}, {skillMagic: 104},
+      {skillMagic: 106}, {skillMagic: 108}, {skillMagic: 110}, {skillMagic: 112},
+      {skillMagic: 114}, {skillMagic: 116}, {skillMagic: 118}, {skillMagic: 120},
+      {skillMagic: 122}, {skillMagic: 124}, {skillMagic: 126}, {skillMagic: 128},
+      {skillMagic: 130}, {skillMagic: 132}, {skillMagic: 134}, {skillMagic: 136},
+      {skillMagic: 138}, {skillMagic: 140},
+    ]
+  }, {
+    name: 'Paralyze',
+    type: 'poison',
+    values: [
+      {skillMagic: 134}, {skillMagic: 138}, {skillMagic: 142}, {skillMagic: 146},
+      {skillMagic: 150}, {skillMagic: 154}, {skillMagic: 158}, {skillMagic: 162},
+      {skillMagic: 166}, {skillMagic: 170}, {skillMagic: 174}, {skillMagic: 178},
+      {skillMagic: 182}, {skillMagic: 186}, {skillMagic: 190}, {skillMagic: 194},
+      {skillMagic: 198}, {skillMagic: 202}, {skillMagic: 206}, {skillMagic: 210},
+      {skillMagic: 213}, {skillMagic: 216}, {skillMagic: 219}, {skillMagic: 222},
+      {skillMagic: 225}, {skillMagic: 228}, {skillMagic: 231}, {skillMagic: 234},
+      {skillMagic: 237}, {skillMagic: 240},
+    ]
+  }, {
+    name: 'Meteor Shower',
+    type: 'fire',
+    values: [
+      {skillMagic: 330}, {skillMagic: 340}, {skillMagic: 350}, {skillMagic: 360},
+      {skillMagic: 370}, {skillMagic: 380}, {skillMagic: 390}, {skillMagic: 400},
+      {skillMagic: 410}, {skillMagic: 420}, {skillMagic: 430}, {skillMagic: 440},
+      {skillMagic: 450}, {skillMagic: 460}, {skillMagic: 470}, {skillMagic: 480},
+      {skillMagic: 490}, {skillMagic: 500}, {skillMagic: 510}, {skillMagic: 520},
+      {skillMagic: 530}, {skillMagic: 540}, {skillMagic: 550}, {skillMagic: 560},
+      {skillMagic: 570}, {skillMagic: 580}, {skillMagic: 590}, {skillMagic: 600},
+      {skillMagic: 610}, {skillMagic: 620},
+    ]
+  }, {
+    name: 'Cold Beam',
+    type: 'ice',
+    values: [
+      {skillMagic: 13}, {skillMagic: 16}, {skillMagic: 19}, {skillMagic: 22},
+      {skillMagic: 25}, {skillMagic: 28}, {skillMagic: 31}, {skillMagic: 34},
+      {skillMagic: 37}, {skillMagic: 40}, {skillMagic: 43}, {skillMagic: 46},
+      {skillMagic: 49}, {skillMagic: 52}, {skillMagic: 55}, {skillMagic: 58},
+      {skillMagic: 61}, {skillMagic: 64}, {skillMagic: 67}, {skillMagic: 70},
+      {skillMagic: 73}, {skillMagic: 76}, {skillMagic: 79}, {skillMagic: 82},
+      {skillMagic: 85}, {skillMagic: 88}, {skillMagic: 91}, {skillMagic: 94},
+      {skillMagic: 97}, {skillMagic: 100},
+    ]
+  }, {
+    name: 'Thunderbolt',
+    type: 'lightning',
+    values: [
+      {skillMagic: 2}, {skillMagic: 4}, {skillMagic: 6}, {skillMagic: 8},
+      {skillMagic: 10}, {skillMagic: 12}, {skillMagic: 14}, {skillMagic: 16},
+      {skillMagic: 18}, {skillMagic: 20}, {skillMagic: 22}, {skillMagic: 24},
+      {skillMagic: 26}, {skillMagic: 28}, {skillMagic: 30}, {skillMagic: 32},
+      {skillMagic: 34}, {skillMagic: 36}, {skillMagic: 38}, {skillMagic: 40},
+      {skillMagic: 42}, {skillMagic: 44}, {skillMagic: 46}, {skillMagic: 48},
+      {skillMagic: 50}, {skillMagic: 52}, {skillMagic: 54}, {skillMagic: 56},
+      {skillMagic: 58}, {skillMagic: 60},
+    ]
+  }, {
+    name: 'Ice Strike',
+    type: 'ice',
+    values: [
+      {skillMagic: 32}, {skillMagic: 34}, {skillMagic: 36}, {skillMagic: 38},
+      {skillMagic: 40}, {skillMagic: 42}, {skillMagic: 44}, {skillMagic: 46},
+      {skillMagic: 48}, {skillMagic: 50}, {skillMagic: 52}, {skillMagic: 54},
+      {skillMagic: 56}, {skillMagic: 58}, {skillMagic: 60}, {skillMagic: 62},
+      {skillMagic: 64}, {skillMagic: 66}, {skillMagic: 68}, {skillMagic: 70},
+      {skillMagic: 72}, {skillMagic: 74}, {skillMagic: 76}, {skillMagic: 78},
+      {skillMagic: 80}, {skillMagic: 82}, {skillMagic: 84}, {skillMagic: 86},
+      {skillMagic: 88}, {skillMagic: 90},
+    ]
+  }, {
+    name: 'Thunder Spear',
+    type: 'lightning',
+    values: [
+      {skillMagic: 80}, {skillMagic: 90}, {skillMagic: 95}, {skillMagic: 100},
+      {skillMagic: 104}, {skillMagic: 108}, {skillMagic: 111}, {skillMagic: 115},
+      {skillMagic: 118}, {skillMagic: 121}, {skillMagic: 124}, {skillMagic: 127},
+      {skillMagic: 130}, {skillMagic: 133}, {skillMagic: 135}, {skillMagic: 138},
+      {skillMagic: 141}, {skillMagic: 143}, {skillMagic: 145}, {skillMagic: 148},
+      {skillMagic: 150}, {skillMagic: 153}, {skillMagic: 155}, {skillMagic: 157},
+      {skillMagic: 159}, {skillMagic: 162}, {skillMagic: 164}, {skillMagic: 166},
+      {skillMagic: 168}, {skillMagic: 170},
+    ]
+  }, {
+    name: 'Element Composition',
+    type: 'ice|lightning',
+    values: [
+      {skillMagic: 80}, {skillMagic: 84}, {skillMagic: 87}, {skillMagic: 90},
+      {skillMagic: 93}, {skillMagic: 96}, {skillMagic: 98}, {skillMagic: 100},
+      {skillMagic: 102}, {skillMagic: 104}, {skillMagic: 106}, {skillMagic: 108},
+      {skillMagic: 110}, {skillMagic: 112}, {skillMagic: 114}, {skillMagic: 116},
+      {skillMagic: 118}, {skillMagic: 120}, {skillMagic: 122}, {skillMagic: 124},
+      {skillMagic: 126}, {skillMagic: 128}, {skillMagic: 130}, {skillMagic: 132},
+      {skillMagic: 134}, {skillMagic: 136}, {skillMagic: 137}, {skillMagic: 138},
+      {skillMagic: 139}, {skillMagic: 140},
+    ]
+  }, {
+    name: 'Ice Demon',
+    type: 'ice',
+    values: [
+      {skillMagic: 62}, {skillMagic: 64}, {skillMagic: 66}, {skillMagic: 68},
+      {skillMagic: 70}, {skillMagic: 72}, {skillMagic: 74}, {skillMagic: 76},
+      {skillMagic: 78}, {skillMagic: 80}, {skillMagic: 82}, {skillMagic: 84},
+      {skillMagic: 86}, {skillMagic: 88}, {skillMagic: 90}, {skillMagic: 92},
+      {skillMagic: 94}, {skillMagic: 96}, {skillMagic: 98}, {skillMagic: 100},
+      {skillMagic: 102}, {skillMagic: 104}, {skillMagic: 106}, {skillMagic: 108},
+      {skillMagic: 110}, {skillMagic: 112}, {skillMagic: 114}, {skillMagic: 116},
+      {skillMagic: 118}, {skillMagic: 120},
+    ]
+  }, {
+    name: 'Chain Lightning',
+    type: 'lightning',
+    values: [
+      {skillMagic: 104}, {skillMagic: 108}, {skillMagic: 112}, {skillMagic: 116},
+      {skillMagic: 120}, {skillMagic: 124}, {skillMagic: 128}, {skillMagic: 132},
+      {skillMagic: 136}, {skillMagic: 140}, {skillMagic: 144}, {skillMagic: 148},
+      {skillMagic: 152}, {skillMagic: 156}, {skillMagic: 160}, {skillMagic: 164},
+      {skillMagic: 168}, {skillMagic: 172}, {skillMagic: 176}, {skillMagic: 180},
+      {skillMagic: 183}, {skillMagic: 186}, {skillMagic: 189}, {skillMagic: 192},
+      {skillMagic: 195}, {skillMagic: 198}, {skillMagic: 201}, {skillMagic: 204},
+      {skillMagic: 207}, {skillMagic: 210},
+    ]
+  }, {
+    name: 'Blizzard',
+    type: 'ice',
+    values: [
+      {skillMagic: 330}, {skillMagic: 340}, {skillMagic: 350}, {skillMagic: 360},
+      {skillMagic: 370}, {skillMagic: 380}, {skillMagic: 390}, {skillMagic: 400},
+      {skillMagic: 410}, {skillMagic: 420}, {skillMagic: 430}, {skillMagic: 440},
+      {skillMagic: 450}, {skillMagic: 460}, {skillMagic: 470}, {skillMagic: 480},
+      {skillMagic: 490}, {skillMagic: 500}, {skillMagic: 510}, {skillMagic: 520},
+      {skillMagic: 530}, {skillMagic: 540}, {skillMagic: 550}, {skillMagic: 560},
+      {skillMagic: 570}, {skillMagic: 580}, {skillMagic: 585}, {skillMagic: 590},
+      {skillMagic: 595}, {skillMagic: 600},
+    ]
+  }, {
+    name: 'Heal',
+    type: 'heal',
+    values: [
+      {dmgMultiplier: 0.10}, {dmgMultiplier: 0.20}, {dmgMultiplier: 0.30}, {dmgMultiplier: 0.40},
+      {dmgMultiplier: 0.50}, {dmgMultiplier: 0.60}, {dmgMultiplier: 0.70}, {dmgMultiplier: 0.80},
+      {dmgMultiplier: 0.90}, {dmgMultiplier: 1.00}, {dmgMultiplier: 1.10}, {dmgMultiplier: 1.20},
+      {dmgMultiplier: 1.30}, {dmgMultiplier: 1.40}, {dmgMultiplier: 1.50}, {dmgMultiplier: 1.60},
+      {dmgMultiplier: 1.70}, {dmgMultiplier: 1.80}, {dmgMultiplier: 1.90}, {dmgMultiplier: 2.00},
+      {dmgMultiplier: 2.10}, {dmgMultiplier: 2.20}, {dmgMultiplier: 2.30}, {dmgMultiplier: 2.40},
+      {dmgMultiplier: 2.50}, {dmgMultiplier: 2.60}, {dmgMultiplier: 2.70}, {dmgMultiplier: 2.80},
+      {dmgMultiplier: 2.90}, {dmgMultiplier: 3.00},
+    ]
+  }, {
+    name: 'Holy Arrow',
+    type: 'holy',
+    values: [
+      {skillMagic: 22}, {skillMagic: 24}, {skillMagic: 26}, {skillMagic: 28},
+      {skillMagic: 30}, {skillMagic: 32}, {skillMagic: 34}, {skillMagic: 36},
+      {skillMagic: 38}, {skillMagic: 40}, {skillMagic: 42}, {skillMagic: 44},
+      {skillMagic: 46}, {skillMagic: 48}, {skillMagic: 50}, {skillMagic: 52},
+      {skillMagic: 54}, {skillMagic: 56}, {skillMagic: 58}, {skillMagic: 60},
+      {skillMagic: 62}, {skillMagic: 64}, {skillMagic: 66}, {skillMagic: 68},
+      {skillMagic: 70}, {skillMagic: 72}, {skillMagic: 74}, {skillMagic: 76},
+      {skillMagic: 78}, {skillMagic: 80},
+    ]
+  }, {
+    name: 'Shining Ray',
+    type: 'holy',
+    values: [
+      {skillMagic: 60}, {skillMagic: 62}, {skillMagic: 64}, {skillMagic: 66},
+      {skillMagic: 68}, {skillMagic: 70}, {skillMagic: 72}, {skillMagic: 74},
+      {skillMagic: 76}, {skillMagic: 78}, {skillMagic: 80}, {skillMagic: 82},
+      {skillMagic: 84}, {skillMagic: 86}, {skillMagic: 88}, {skillMagic: 90},
+      {skillMagic: 92}, {skillMagic: 93}, {skillMagic: 94}, {skillMagic: 95},
+      {skillMagic: 96}, {skillMagic: 97}, {skillMagic: 98}, {skillMagic: 99},
+      {skillMagic: 100}, {skillMagic: 101}, {skillMagic: 102}, {skillMagic: 103},
+      {skillMagic: 104}, {skillMagic: 105},
+    ]
+  }, {
+    name: 'Angel Ray',
+    type: 'holy',
+    values: [
+      {skillMagic: 123}, {skillMagic: 126}, {skillMagic: 129}, {skillMagic: 132},
+      {skillMagic: 135}, {skillMagic: 138}, {skillMagic: 141}, {skillMagic: 144},
+      {skillMagic: 147}, {skillMagic: 150}, {skillMagic: 154}, {skillMagic: 158},
+      {skillMagic: 162}, {skillMagic: 166}, {skillMagic: 170}, {skillMagic: 174},
+      {skillMagic: 178}, {skillMagic: 182}, {skillMagic: 186}, {skillMagic: 190},
+      {skillMagic: 195}, {skillMagic: 200}, {skillMagic: 205}, {skillMagic: 210},
+      {skillMagic: 215}, {skillMagic: 220}, {skillMagic: 225}, {skillMagic: 230},
+      {skillMagic: 235}, {skillMagic: 240},
+    ]
+  }, {
+    name: 'Genesis',
+    type: 'holy',
+    values: [
+      {skillMagic: 430}, {skillMagic: 440}, {skillMagic: 450}, {skillMagic: 460},
+      {skillMagic: 470}, {skillMagic: 480}, {skillMagic: 490}, {skillMagic: 500},
+      {skillMagic: 510}, {skillMagic: 520}, {skillMagic: 530}, {skillMagic: 540},
+      {skillMagic: 550}, {skillMagic: 560}, {skillMagic: 570}, {skillMagic: 580},
+      {skillMagic: 590}, {skillMagic: 600}, {skillMagic: 610}, {skillMagic: 620},
+      {skillMagic: 625}, {skillMagic: 630}, {skillMagic: 635}, {skillMagic: 640},
+      {skillMagic: 645}, {skillMagic: 650}, {skillMagic: 655}, {skillMagic: 660},
+      {skillMagic: 665}, {skillMagic: 670},
+    ]
+  }
+]
